    so any system gpg will be preferred over it.
  * Avoid crashing when built with MagicMime support, but when the magic
    database cannot be loaded.
  * Include magic database in the linux and OSX standalone builds.
  * Fix memory leak when hashing files, which triggered during fsck
    when an external hash program was not used.
    (This leak was introduced in version 6.20160114.)

 -- Joey Hess <id@joeyh.name>  Thu, 18 Feb 2016 13:09:21 -0400

git-annex (6.20160217) unstable; urgency=medium

  * Support getting files from read-only repositories.
  * checkpresentkey: Allow to be run without an explicit remote.
  * checkpresentkey: Added --batch.
  * Work around problem with concurrent-output when in a non-unicode locale
    by avoiding use of it in such a locale. Instead -J will behave as if
    it was built without concurrent-output support in this situation.
  * Fix storing of filenames of v6 unlocked files when the filename is not
    representable in the current locale.
  * fsck: Detect and fix missing associated file mappings in v6 repositories.
  * fsck: Populate unlocked files in v6 repositories whose content is
    present in annex/objects but didn't reach the work tree.
  * When initializing a v6 repo on a crippled filesystem, don't force it
    into direct mode.
  * Windows: Fix v6 unlocked files to actually work.
  * add, addurl, import, importfeed: When in a v6 repository on a crippled
    filesystem, add files unlocked.
  * annex.addunlocked: New configuration setting, makes files always be
    added unlocked. (v6 only)
  * Improve format of v6 unlocked pointer files to support keys containing
    slashes.

 -- Joey Hess <id@joeyh.name>  Wed, 17 Feb 2016 14:48:51 -0400

git-annex (6.20160211) unstable; urgency=medium

  * annex.addsmallfiles: New option controlling what is done when
    adding files not matching annex.largefiles.
  * Fix reversion in lookupkey, contentlocation, and examinekey which