@@ -15,6 +15,10 @@ git-annex (6.20160218) UNRELEASED; urgency=medium
   * Fix memory leak when hashing files, which triggered during fsck
     when an external hash program was not used.
     (This leak was introduced in version 6.20160114.)
+  * Support --metadata field<number, --metadata field>number etc
+    to match ranges of numeric values.
+  * Similarly, support preferred content expressions like
+    metadata=field<number and metadata=field>number
 
  -- Joey Hess <id@joeyh.name>  Thu, 18 Feb 2016 13:09:21 -0400
 
